[gd_scene load_steps=4 format=3 uid="uid://t3qih7b064a8"]

[ext_resource type="Script" path="res://scenes/task_creator/task_configs/harvest_resource_config/harvestable_buttons/harvestable_buttons.gd" id="1_ldoin"]
[ext_resource type="PackedScene" uid="uid://crswmjwmqa0k5" path="res://scenes/task_creator/task_configs/harvest_resource_config/harvestable_images/tree.tscn" id="2_d4cvx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2vbgm"]
bg_color = Color(0.435294, 0.643137, 0.666667, 0)

[node name="ResourceButtons" type="HBoxContainer"]
offset_left = 12.0
offset_top = 83.0
offset_right = 130.0
offset_bottom = 149.0
alignment = 1
script = ExtResource("1_ldoin")

[node name="LeftBtn" type="Button" parent="."]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "←"

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2vbgm")

[node name="Tree" parent="PanelContainer" instance=ExtResource("2_d4cvx")]
layout_mode = 2

[node name="RightBtn" type="Button" parent="."]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "→"

[connection signal="pressed" from="LeftBtn" to="." method="_on_left_pressed"]
[connection signal="pressed" from="RightBtn" to="." method="_on_right_pressed"]
